--- a/scss/style.css
+++ b/scss/style.css
@@ -37,6 +37,46 @@ a {
 }
 .gallery .swiper-wrapper {
   width: 100%;
+  height: 100%;
+}
+.gallery .swiper-wrapper .swiper-slide {
+  width: 500px;
+  height: 500px;
+  top: 50%;
+  margin-top: -230px;
+}
+.gallery .swiper-wrapper .swiper-slide .inner {
+  width: 100%;
+  height: 100%;
+  background-color: #fff;
+  padding: 30px;
+  opacity: 0.4;
+}
+.gallery .swiper-wrapper .swiper-slide .inner .con {
+  position: relative;
+}
+.gallery .swiper-wrapper .swiper-slide .inner .con img {
+  width: 100%;
+}
+.gallery .swiper-wrapper .swiper-slide .inner .con h2 {
+  font: normal 40px/1 "roboto";
+  color: #111;
+  margin-top: 15px;
+  margin-bottom: 20px;
+}
+.gallery .swiper-wrapper .swiper-slide .inner .con h2::after {
+  content: "";
+  display: block;
+  width: 30px;
+  height: 1px;
+  background-color: #888;
+  margin-top: 15px;
+  transition: 1s 0.5s;
+}
+.gallery .swiper-wrapper .swiper-slide .inner .con p {
+  font: 13px/1 "arial";
+  color: #aaa;
+  letter-spacing: 1px;
 }
 .gallery .auto {
   position: absolute;
