--- a/scss/style.css
+++ b/scss/style.css
@@ -78,6 +78,34 @@ a {
   color: #aaa;
   letter-spacing: 1px;
 }
+.gallery .swiper-wrapper .swiper-slide .inner::before, .gallery .swiper-wrapper .swiper-slide .inner::after {
+  content: "";
+  display: block;
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  top: 0;
+  left: 0;
+  background-color: #fff;
+  opacity: 0;
+}
+.gallery .swiper-wrapper .swiper-slide-prev .inner,
+.gallery .swiper-wrapper .swiper-slide-next .inner {
+  opacity: 0.7;
+}
+.gallery .swiper-wrapper .swiper-slide-active .inner {
+  opacity: 1;
+  box-shadow: 0px 0px 50px rgba(255, 255, 255, 0.7);
+}
+.gallery .swiper-wrapper .swiper-slide-active .inner .con h2::after {
+  width: 400px;
+}
+.gallery .swiper-wrapper .swiper-slide-active .inner::before {
+  animation: ani 1s linear 1;
+}
+.gallery .swiper-wrapper .swiper-slide-active .inner::after {
+  animation: ani 1s 0.3s linear 1;
+}
 .gallery .auto {
   position: absolute;
   bottom: 60px;
@@ -117,5 +145,24 @@ a {
 }
 .gallery .swiper-pagination-fraction span.swiper-pagination-current {
   font-size: 30px;
+  font-weight: bold;
   color: #fff;
+}
+.gallery .swiper-pagination-fraction span.swiper-pagination-total {
+  font-size: 18px;
+  color: #555;
+}
+
+@keyframes ani {
+  0% {
+    transform: scale(1);
+    opacity: 0;
+  }
+  1% {
+    opacity: 1;
+  }
+  100% {
+    transform: scale(1.4);
+    opacity: 0;
+  }
 }/*# sourceMappingURL=style.css.map */
