--- a/scss/style.scss
+++ b/scss/style.scss
@@ -70,8 +70,61 @@
             letter-spacing: 1px;
           }
         }
+
+        &::before,
+        &::after {
+          content: "";
+          display: block;
+          width: 100%;
+          height: 100%;
+          position: absolute;
+          top: 0;
+          left: 0;
+          background-color: #fff;
+          opacity: 0;
+        }
       }
     }
+
+    .swiper-slide-prev .inner,
+    .swiper-slide-next .inner {
+      opacity: 0.7;
+    }
+
+    .swiper-slide-active {
+      .inner {
+        opacity: 1;
+        box-shadow: 0px 0px 50px rgba(255, 255, 255, 0.7);
+
+        .con {
+          h2 {
+            &::after {
+              width: 400px;
+            }
+          }
+        }
+
+        &::before {
+          animation: ani 1s linear 1;
+        }
+
+        &::after {
+          animation: ani 1s 0.3s linear 1;
+        }
+      }
+    }
+
+    // .swiper-slide-prev{
+    //     .inner{
+
+    //     }
+    // }
+
+    // .swiper-slide-next{
+    //     .inner{
+
+    //     }
+    // }
   }
 
   .auto {
@@ -118,7 +171,29 @@
 
     span.swiper-pagination-current {
       font-size: 30px;
+      font-weight: bold;
       color: #fff;
     }
+
+    span.swiper-pagination-total {
+      font-size: 18px;
+      color: #555;
+    }
+  }
+}
+
+@keyframes ani {
+  0% {
+    transform: scale(1);
+    opacity: 0;
+  }
+
+  1% {
+    opacity: 1;
+  }
+
+  100% {
+    transform: scale(1.4);
+    opacity: 0;
   }
 }
